[globsl]
quiet = 0

[metadata]
name = BayesASE
version = 1.0.0
description = Bayesian analysis of allele specific expression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/McIntyre-Lab/BASE_2020
author = McIntyre Lab, Universify of Florida
author_email = om@rc.ufl.edu
license = MIT
keywords = bayesian allele expression
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
setup_requires =
    setuptools
install_requires =
    biopython >= 1.70
    numpy >= 1.18.1
    pandas >= 1.0.0
scripts=
    scripts/bwa_split_sam_seonly_2output.py
    scripts/calculate_counts_ase_count_tables.py
    scripts/check_aln_design_file.py
    scripts/check_comparate_design_file.py
    scripts/check_lost_reads.py
    scripts/check_samcomp_lost_reads.py
    scripts/check_sam_present.py
    scripts/combine_count_tables.py
    scripts/environmentalmodel2.stan
    scripts/merge_comparates_generate_bayesian_headers.py
    scripts/merge_priors_to_comparate.py
    scripts/nbmodel_stan2_flex_prior.R
    scripts/nbmodel_stan2.py
    scripts/sam_compare_w_feature.py
    scripts/summarize_sam_compare_cnts_table_1cond.py

[bumpversion]
current_version = 1.0.0
commit = True
tag = False

#[egg_info]
#tag_build = .pre
#tag_date = 1

[aliases]
clean_egg_info = egg_info -Db ""
release = clean_egg_info sdist bdist_wheel
source = register sdist binary
binary = bdist_egg upload --show-response

[upload]
repository = pypitest

[sdist]
formats = zip, gztar

[bdist_wheel]
universal=0

[flake8]
max-line-length = 99
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
